--- a/index.html
+++ b/index.html
@@ -65,12 +65,34 @@
                 </div>
                 <div class="telephone-form">
                     <div class="background-phone">
-                        <img class="jopa" src="assets/img/background-form.png" alt="">
+                        <img src="assets/img/background-form.png" alt="">
                         <div class="content-form">
-                            <h5>sdsdsd</h5>
-                            <p>sdsd</p>
-                            <h3>wewweewwwe</h3>
+                            <div class="sale">
+                                <h3>Успейте заказать<br> со скидкой <span>до 10.09.2018</span></h3>
+                            </div>
+                            <div class="price">
+                                <div class="old-price">
+                                    <h4>Старая цена</h4>
+                                    <h1>918 &#8381</h1>
+                                </div>
+                                <div class="new-price">
+                                    <h4>Новая цена</h4>
+                                    <h1>459 &#8381</h1>
+                                </div>
+                            </div>
+
+                            <div class="form">
+                                <form action="">
+                                    <input type="text" placeholder="Имя">
+                                    <input type="text" placeholder="Телефон">
+                                    <button id="btn" type="submit"><h2>Заказать <span>со скидкой</span></h2></button>
+                                    <!--<input type="submit" id="btn-form">-->
+                                    <!--<label for="btn-form"></label>-->
+                                </form>
+                            </div>
+
                         </div>
+
                     </div>
                 </div>
             </div>
