--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         </div>
 
         <div class="main-header">
-            <div class="test"></div>
+            <div class="mikocin">
+                <img src="assets/img/mikocin.png" alt="">
+                <div class="price-mikocin">
+                    <h2>299 &#8381</h2>
+                    <h2>299 &#8381</h2>
+                </div>
+            </div>
+
             <div class="info">
                 <div class="slogan">
                     <h1>Комплексное избавление от грибка —</h1>
@@ -44,19 +51,19 @@
                         <ul class="action-list">
                             <li class="action-link">
                                 <div class="point-1">
-                                    <img src="assets/img/point.png" alt="point">
+                                    <img src="assets/img/point-test.png" alt="point">
                                 </div>
                                 <h3>Комплекс Микоцин <span>устраняет зуд, неприятный запах</span> и возвращает эстетичный вид</h3>
                             </li>
                             <li class="action-link">
                                 <div class="point-2">
-                                    <img src="assets/img/point.png" alt="point">
+                                    <img src="assets/img/point-test.png" alt="point">
                                 </div>
                                 <h3><span class="under-orange">Таблетки</span> Микоцин <span>уничтожают все виды грибка</span> на ногтях и коже</h3>
                             </li>
                             <li class="action-link">
                                 <div class="point-3">
-                                    <img src="assets/img/point.png" alt="point">
+                                    <img src="assets/img/point-test.png" alt="point">
                                 </div>
                                 <h3><span class="under-green">Гель</span> Микоцин <span>восстанавливает кожу</span> и создает на ней <span>защитный барьер</span></h3>
                             </li>
@@ -66,6 +73,10 @@
                 <div class="telephone-form">
                     <div class="background-phone">
                         <img src="assets/img/background-form.png" alt="">
+                        <div class="delivery-form">
+                            <img src="assets/img/delivery.svg" alt="">
+                            <h3>Бесплатно</h3>
+                        </div>
                         <div class="content-form">
                             <div class="sale">
                                 <h3>Успейте заказать<br> со скидкой <span>до 10.09.2018</span></h3>
@@ -86,16 +97,82 @@
                                     <input type="text" placeholder="Имя">
                                     <input type="text" placeholder="Телефон">
                                     <button id="btn" type="submit"><h2>Заказать <span>со скидкой</span></h2></button>
-                                    <!--<input type="submit" id="btn-form">-->
-                                    <!--<label for="btn-form"></label>-->
                                 </form>
                             </div>
 
+                            <div class="fast-buy">
+                                <h3>Осталось <span>10</span> упаковок со скидкой</h3>
+                            </div>
                         </div>
-
+                        <div class="footer-form">
+                            <img src="assets/img/protect-form.svg" alt="">
+                            <h3>Ваши данные защищены!</h3>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</header>
+
+<main class="main">
+    <div class="container">
+        <div class="main-content-logo">
+            <object type="image/svg+xml" data="assets/img/logo.svg"></object>
+        </div>
+        <div class="main-content-slogan">
+            <h1>Грибок – это опасная инфекция</h1>
+            <h3>которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:</h3>
+        </div>
+
+        <div class="effects">
+            <div class="allergy">
+                <div class="img-allergy">
+                    <img src="assets/img/alergy.png" alt="alergy">
+                    <span>1</span>
+                </div>
+                <h2>Сложным формам аллергии</h2>
+                <div class="text-effects">
+                    <hr>
+                    <p>Может появится сильная реакция на на привычную пищу, одежду, средства гигиены</p>
+                </div>
+            </div>
+
+            <div class="amputation">
+                <div class="img-allergy">
+                    <img src="assets/img/amputation.png" alt="amputation">
+                    <span>2</span>
+                </div>
+                <h2>Потере ногтя и ампутации пальца</h2>
+                <div class="text-effects">
+                    <hr>
+                    <p>После полного разрушения ногтя грибок распространяется на палец, что приводит к его ампутации </p>
+                </div>
+            </div>
+
+            <div class="authorities">
+                <div class="img-allergy">
+                    <img src="assets/img/authorities.png" alt="amputation">
+                    <span>3</span>
+                </div>
+                <h2>Тяжелому поражению внутренних органов</h2>
+                <div class="text-effects">
+                    <hr>
+                    <p>Может привести к повреждениям мозга, слепоте, отказу печени, почек и сердца</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<header>
+    <div class="container">
+        <div class="statistics">
+            <img src="assets/img/gistogram.jpg" alt="">
+            <h2>
+                <span>Статистика:</span> каждые 60 секунд врачи диагностируют опасные поражения внутренних органов,
+                вызванные грибком, у 1-го пациент
+            </h2>
         </div>
     </div>
 </header>
