--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/media.css">
+    <meta name="viewport" content="width=device-width">
 </head>
 <body>
 <header class="header">
@@ -19,15 +21,18 @@
             <div class="advantages">
                 <ul class="advantages-list">
                     <li class="advantages-link">
-                        <object type="image/svg+xml" data="assets/img/number1.svg"></object>
+                        <!--<object type="image/svg+xml" data="assets/img/number1.svg"></object>-->
+                        <img src="assets/img/number1.svg" alt="">
                         <h3>№1 Для избавления от любого типа грибка</h3>
                     </li>
                     <li class="advantages-link">
-                        <object type="image/svg+xml" data="assets/img/protect.svg"></object>
+                        <!--<object type="image/svg+xml" data="assets/img/protect.svg"></object>-->
+                        <img src="assets/img/protect.svg" alt="">
                         <h3>Рекомендован дерматологами</h3>
                     </li>
                     <li class="advantages-link">
-                        <object type="image/svg+xml" data="assets/img/klients.svg"></object>
+                        <!--<object type="image/svg+xml" data="assets/img/klients.svg"></object>-->
+                        <img src="assets/img/klients.svg" alt="">
                         <h3>13000+ довольных клиентов за 2018 год</h3>
                     </li>
                 </ul>
